implemented mkdir and touch